--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -1,15 +1,15 @@
-@import './_settings';
-@import './header.scss';
-@import './choiceHome.scss';
-@import './Administration/admin';
-@import './Administration/dashboardLeft';
-@import './Administration/userInfos';
-@import './Administration/userPassword';
-@import './Administration/dashboardRight';
-@import './Administration/updateUser';
-@import './Administration/userList';
-@import './Administration/userInformations';
-@import './Administration/userFromList';
-@import './Administration/updateButtons';
-@import './Administration/createUser';
-@import './Administration/userForm';
+@import "./_settings";
+@import "./header.scss";
+@import "./choiceHome.scss";
+@import "./Administration/admin";
+@import "./Administration/dashboardLeft";
+@import "./Administration/connectedUser";
+@import "./Administration/userPassword";
+@import "./Administration/dashboardRight";
+@import "./Administration/updateUser";
+@import "./Administration/userList";
+@import "./Administration/userInformations";
+@import "./Administration/userFromList";
+@import "./Administration/updateButtons";
+@import "./Administration/createUser";
+@import "./Administration/userForm";
