--- a/suderereact/src/styles/Administration/_myPassword.scss
+++ b/suderereact/src/styles/Administration/_myPassword.scss
@@ -1,14 +1,13 @@
 .userPassword {
-    height: 65vh;
     display: flex;
     flex-direction: column;
-    color: white;
-    font-size: 1.2vw;
+    color: $carbone;
+    font-size: 1vw;
+    padding: 5%;
     &__title {
         margin: 20px auto;
     }
     &__form {
-        margin-top: 50px;
         display: flex;
         flex-direction: column;
         justify-content: center;
