--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -12,9 +12,10 @@
 @import "./Administration/connectedUser";
 @import "./Administration/admin";
 @import "./Administration/dashboardLeft";
-// @import "./Administration/userInfos";
-@import "./Administration/userPassword";
+@import "./Administration/myInfos";
+@import "./Administration/myPassword";
 @import "./Administration/dashboardRight";
+@import "./Administration/myProfile";
 @import "./Administration/updateUser";
 @import "./Administration/userList";
 @import "./Administration/userInformations";
