--- a/suderereact/src/styles/Statistic/StatisticFieldset.scss
+++ b/suderereact/src/styles/Statistic/StatisticFieldset.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
 
+
     &__title {
         display: flex;
         justify-content: center;
@@ -16,35 +17,46 @@
         background-color: $warm_gray_1;
     }
 
-    &__num1 {
-        display: flex;
-        flex-direction: column;
+    &__center {
+        height: 80%;
         width: 100%;
-        font-size: 12px;
-        color: $carbone;
+
+        &__num1 {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            font-size: 12px;
+            color: $carbone;
+        }
+
+        &__num2 {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            font-size: 12px;
+            color: $carbone;
+        }
+
+        &__num3 {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            font-size: 12px;
+            color: $carbone;
+        }
+
+        &__num4 {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            font-size: 12px;
+            color: $carbone;
+        }
     }
 
-    &__num2 {
-        display: flex;
-        flex-direction: column;
+    &__footer {
+        height: 10%;
         width: 100%;
-        font-size: 12px;
-        color: $carbone;
-    }
-
-    &__num3 {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        font-size: 12px;
-        color: $carbone;
-    }
-
-    &__num4 {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        font-size: 12px;
-        color: $carbone;
+        background-color: $warm_gray_1;
     }
 }
