--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -23,3 +23,8 @@
 @import "./Statistic/StatisticChartDoughnut.scss";
 @import "./Statistic/StatisticGraphic.scss";
 @import "./Statistic/StatisticFieldset.scss";
+@import "./Statistic/StatisticAxes.scss";
+@import "./Statistic/StatisticSeries.scss";
+@import "./Statistic/StatisticCenters.scss";
+@import "./Statistic/StatisticDate.scss";
+@import "./Statistic/StatisticDuration.scss";
