--- a/suderereact/src/styles/CommonPage/_centerPage.scss
+++ b/suderereact/src/styles/CommonPage/_centerPage.scss
@@ -106,6 +106,10 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)~
         & h4 {
             margin: auto 0;
             font-size: 2.5vh;
+
+            & span {
+                color: $carbone;
+            }
         }
     }
 
