--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -1,7 +1,7 @@
 @import "./_settings";
 @import "./header.scss";
-@import "./choiceHome.scss";
 @import "./connexion.scss";
+@import "./choiceHome.scss";
 @import "./CommonPage/commonPage";
 @import "./CommonPage/leftPage";
 @import "./CommonPage/centerPage";
@@ -9,17 +9,26 @@
 @import "./CommonPage/trailersInfoConnect.scss";
 @import "./CommonPage/trailersInfoConsult.scss";
 @import "./CommonPage/trailersModifConnect.scss";
-@import "./Administration/connectedUser";
-@import "./Administration/admin";
-@import "./Administration/dashboardLeft";
 @import "./Administration/myInfos";
 @import "./Administration/myPassword";
-@import "./Administration/dashboardRight";
 @import "./Administration/myProfile";
+@import "./Administration/createUser";
+@import "./Administration/userForm";
+@import "./Administration/admin";
+@import "./Administration/dashboardLeft";
+@import "./Administration/connectedUser";
+@import "./Administration/dashboardRight";
 @import "./Administration/updateUser";
 @import "./Administration/userList";
 @import "./Administration/userInformations";
 @import "./Administration/userFromList";
 @import "./Administration/updateButtons";
-@import "./Administration/createUser";
-@import "./Administration/userForm";
+@import "./Statistic/StatisticSort.scss";
+@import "./Statistic/StatisticChartDoughnut.scss";
+@import "./Statistic/StatisticGraphic.scss";
+@import "./Statistic/StatisticFieldset.scss";
+@import "./Statistic/StatisticAxes.scss";
+@import "./Statistic/StatisticSeries.scss";
+@import "./Statistic/StatisticCenters.scss";
+@import "./Statistic/StatisticDate.scss";
+@import "./Statistic/StatisticDuration.scss";
